David Rowlands (25 March 2002)
---------------
Space plague not logging percentage lost correctly.
Decreased the chance of the apocalypse events occuring.
Added code to give people the option to run without cron.
Improved the efficiency of some scheduler tasks.
Fixed infinite loop bug when renaming teams.
Fixed mail compliance problem (was only sending \n when it should be \r\n)

Ron Harwood ( 12 March 2002) -- Oh my god! He touched some code! :-)
--------------
Added onscreen message on how to retrieve lost password

David Rowlands ( 6 March 2002)
--------------
Fixed corporate planet exploit.


Version 0.3.5 Released (5 March 2002)
----------------------
Richard Gowen (14 Febuary 2002)
-------------------------------
Furangee can attack sector defenses
Furangee can attack players on planets

Nospoon (8 February 2002)
-------------------------
Merged Wanders new create universe script
Fixed number of torps firing to be 10%
Ships on planets now fire the correct amount of torps
Fixed exploits in teams
Genesis device can destroy planets again


Nospoon (24 January 2002)
-------------------------
Added bounty System
Added multi run traderoutes
Added planetary apocalypse
Update FAQ

Version 0.3.1 released (5 January 2002)
-------------

SharpBlue (4 January 2002)
---------------------------
Finished language selection code
Finished internationalization of all files
Got rid of the old .php3 extension, to .php
Added a log entry when player captures a planet

Nospoon (2 January 2002)
---------------------------
Revised FAQ and newplayer guide, added it to CVS.
Fixed exploit allowing players to retrieve other players defences


SharpBlue (30 December 2001)
---------------------------
Finished the french translation.
Updated the new player code to give new players the number of turns
elapsed from the beginning of the game, capped at $max_turns.


Nospoon (16 December 2001)
---------------------------
Added code to drain energy from owners and corporate planets to support