@@ -83,7 +83,8 @@ if ($flag==1)
 else
 {
     echo "$l_move_failed<BR><BR>";
-    $query="UPDATE $dbtables[ships] SET cleared_defences=' ' where ship_id=$playerinfo[ship_id]";
+    $db->Execute("UPDATE $dbtables[ships] SET cleared_defences=' ' where ship_id=$playerinfo[ship_id]");
+   
     TEXT_GOTOMAIN();
 }
 
