@@ -10,7 +10,7 @@
   $num_to_tow = 0;
   do
   {
-    $res = $db->Execute("SELECT ship_id,character_name,hull,sector,$dbtables[universe].zone_id,max_hull FROM $dbtables[ships],$dbtables[universe],$dbtables[zones] WHERE sector=sector_id AND $dbtables[universe].zone_id=$dbtables[zones].zone_id AND max_hull<>0 AND $dbtables[ships].hull>max_hull AND ship_destroyed='N'");
+    $res = $db->Execute("SELECT ship_id,character_name,hull,sector,$dbtables[universe].zone_id,max_hull FROM $dbtables[ships],$dbtables[universe],$dbtables[zones] WHERE sector=sector_id AND $dbtables[universe].zone_id=$dbtables[zones].zone_id AND max_hull<>0 AND (($dbtables[ships].hull + $dbtables[ships].engines + $dbtables[ships].computer + $dbtables[ships].beams + $dbtables[ships.torp_launchers + $dbtables[ships].shields + $dbtables[ships].armour)/7) >max_hull AND ship_destroyed='N'");
     if($res)
     {
       $num_to_tow = $res->RecordCount();
@@ -18,7 +18,7 @@
       while(!$res->EOF)
       {
         $row = $res->fields;
-        echo "...towing $row[character_name] out of $row[sector] (max_hull=$row[max_hull] hull=$row[hull])...";
+        echo "...towing $row[character_name] out of $row[sector] ...";
         $newsector = rand(0, $sector_max);
         echo " to sector $newsector.<BR>";
         $query = $db->Execute("UPDATE $dbtables[ships] SET sector=$newsector,cleared_defences=' ' where ship_id=$row[ship_id]");
