@@ -1,3 +1,12 @@
+David Rowlands (14 April 2002)
+------------------------------
+Score now includes IGB balances including loans
+The "You have not completed your last move" bug should now be fixed
+Added code from Ron to stop people putting HTML etc in messages
+Bounty system will no longer pay out on Federation bounties
+You now get towed from sectors if your average tech level is greater than max hull size
+
+
 David Rowlands (25 March 2002)
 ---------------
 Space plague not logging percentage lost correctly.
